FreeST/test/Programs/ValidTests/Modules/BackImport/Utils.fst
module Utils where

g : Int
g = 1
