FreeST/test/Programs/InvalidTests/Modules/ModuleMismatchDepth1/NameMismatch.fst
module Depth1Mismatch where

bool : Bool
bool = False
